add page response model to getUSerGroups